Fixed - Service Icon Was Not Centered In Small Screens -

--- a/css/kasper.css
+++ b/css/kasper.css
@@ -324,6 +324,7 @@ header .container nav .form i {
 	}
 	.services .srv-box i {
 		margin-bottom: 30px;
+		margin-right: 0;
 	}
 }
 .services .srv-box h3 {
